--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
 <modelVersion>4.0.0</modelVersion>
 
 <groupId>fr.univ_amu.iut</groupId>
-<artifactId>tp1</artifactId>
+<artifactId>tp2</artifactId>
 <packaging>jar</packaging>
 <version>1.0-SNAPSHOT</version>
-<name>tp1</name>
+<name>tp2</name>
 <url>http://maven.apache.org</url>
 <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -39,6 +39,13 @@
         <groupId>org.junit.vintage</groupId>
         <artifactId>junit-vintage-engine</artifactId>
         <version>5.8.2</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.assertj</groupId>
+        <artifactId>assertj-core</artifactId>
+        <version>3.22.0</version>
         <scope>test</scope>
     </dependency>
 </dependencies>
